css/styles.css
/* ... */
@media (min-width: 768px) and (min-resolution: 2dppx) {
  .hero-section {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/background-image-768@2x.jpg");
  }
}

@media screen and (min-width: 1158px) {
  .container {
    max-width: 1158px;
    padding: 0 15px;
  }

  .hero-section {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/background-image-1440.jpg");
    padding: 188px 0;
  }

  .hero-title {
    margin-bottom: 48px;
  }

  .section {
    padding: 120px 0;
  }

  .team-section h3,
  .portfolio-section h3,
  .features-section h3 {
    font-size: 20px;
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #2e2f42;
  }

  .features-section {
    font-weight: 400;
  }

  .features-list {
    gap: 24px;
  }

  .icon-box {
    display: flex;
  }

  .features-item {
    width: 264px;
  }

  .team-list {
    gap: 24px;
  }

  .portfolio-item {
    width: 360px;
  }

  .portfolio-item-container {
    width: 360px;
  }

  .hidden-window {
    max-width: 360px;
  }

  .footer-class {
    padding: 100px 0;
  }

  .footer-class .container {
    max-width: 1158px;
    flex-wrap: nowrap;
    justify-content: flex-start;
    margin: 0 auto;
  }

  .footer-descr {
    margin-right: 120px;
  }

  .footer-subscr {
    margin-left: auto;
    margin-top: 0;
  }

  .subscr-text {
    display: flex;
    justify-content: flex-start;
  }

  .footer-left {
    width: 592px;
    justify-content: flex-start;
    display: flex;
    flex-direction: row;
    gap: 0px;
  }
}

@media (min-width: 1158px) and (min-resolution: 2dppx) {
  .hero-section {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/background-image-1440@2x.jpg");
  }
}

